--- a/APP/Android/PointsLeague/app/src/main/res/layout/content_cards_points.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/content_cards_points.xml
@@ -46,48 +46,57 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="310dp"
         android:paddingStart="30dp"
         android:paddingEnd="30dp">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="180dp"
-                android:src="@drawable/store_card"/>
-        </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="40dp"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="190dp"
-                android:src="@drawable/store_card"/>
-        </android.support.v7.widget.CardView>
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="180dp"
+                    android:src="@drawable/store_card"/>
+            </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="80dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="200dp"
-                android:src="@drawable/store_card"/>
-        </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="40dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="190dp"
+                    android:src="@drawable/store_card"/>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="80dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    android:src="@drawable/store_card"/>
+            </android.support.v7.widget.CardView>
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:background="#50e2e2e2">
 
             <TextView
                 android:id="@+id/textView_all_points_main"
@@ -108,6 +117,19 @@
                 android:textColor="@color/colorWhite"/>
         </LinearLayout>
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:gravity="end"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingEnd="50dp">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="积分兑换"
+            android:textColor="@color/colorWhite"
+            android:backgroundTint="@color/colorPrimary"/>
     </RelativeLayout>
 
 
