--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_general_setting.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_general_setting.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme">
+        android:theme="?attr/actionBarTheme"
+        app:theme="@style/ToolbarTheme">
 
 
         <TextView
