--- a/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#37309f</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorUnable">#c3c3c3</color>
 </resources>
