--- a/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/fragment_find.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -27,8 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
-                android:drawableStart="@drawable/ic_search_black_24dp"
                 android:drawablePadding="5dp"
+                android:drawableStart="@drawable/ic_search_black_24dp"
                 android:hint="请输入搜索内容"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
@@ -42,8 +42,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="20dp"
-                app:srcCompat="@drawable/ic_clear_black_24dp"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_clear_black_24dp" />
         </FrameLayout>
 
         <Button
@@ -80,8 +80,8 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:button="@null"
-                android:drawablePadding="10dp"
                 android:drawableEnd="@drawable/ic_expand_more_black_24dp"
+                android:drawablePadding="10dp"
                 android:gravity="center"
                 android:text="地点"
                 android:textSize="15sp" />
@@ -101,8 +101,8 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:button="@null"
-                android:drawablePadding="10dp"
                 android:drawableEnd="@drawable/ic_expand_more_black_24dp"
+                android:drawablePadding="10dp"
                 android:gravity="center"
                 android:text="条件"
                 android:textSize="15sp" />
@@ -122,8 +122,8 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:button="@null"
-                android:drawablePadding="10dp"
                 android:drawableEnd="@drawable/ic_expand_more_black_24dp"
+                android:drawablePadding="10dp"
                 android:gravity="center"
                 android:text="时间"
                 android:textSize="15sp" />
@@ -134,6 +134,7 @@
         android:id="@+id/horizontal_spilt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -150,120 +151,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp"
-                app:cardPreventCornerOverlap="false">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:scaleType="fitXY" />
-
-                        <Button
-                            android:layout_width="67dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginEnd="5dp"
-                            android:text="查看"
-                            android:textColor="#ffffff" />
-                    </RelativeLayout>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp"
-                app:cardPreventCornerOverlap="false">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:scaleType="fitXY" />
-
-                        <Button
-                            android:layout_width="67dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginEnd="5dp"
-                            android:text="查看"
-                            android:textColor="#ffffff" />
-                    </RelativeLayout>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="5dp"
-                app:cardPreventCornerOverlap="false">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="200dp"
-                            android:scaleType="fitXY" />
-
-                        <Button
-                            android:layout_width="67dp"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginEnd="5dp"
-                            android:text="查看"
-                            android:textColor="#ffffff" />
-                    </RelativeLayout>
-
-                </LinearLayout>
-            </android.support.v7.widget.CardView>
+            <include layout="@layout/content_activity_find"></include>
+            <include layout="@layout/content_activity_find"></include>
+            <include layout="@layout/content_activity_find"></include>
 
         </LinearLayout>
     </ScrollView>
-
 
 
 </LinearLayout>
