--- a/APP/Android/PointsLeague/app/src/main/res/layout/activity_add_card.xml
+++ b/APP/Android/PointsLeague/app/src/main/res/layout/activity_add_card.xml
@@ -2,10 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddCardActivity"
-    android:layout_marginBottom="50dp">
+    tools:context=".AddCardActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_add_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView_add_card"
         android:layout_width="match_parent"
